improve code by resolving log errors and warnings, remove relationshipType from graphQL schema, fix bugs